Revision history for exact

{{$NEXT}}

1.04      2018-06-20 12:31:51-07:00 America/Los_Angeles
        - use strictures 2
        - use namespace::autoclean

1.03      2018-01-04 18:58:07-08:00 America/Los_Angeles
        - Add Perl versions to test; annual general update for 2018
        - Remove testing switch statements (given/when) because v27 drops support

1.02      2017-07-10 13:32:41-04:00 America/New_York
        - Alter dependencies to enable old versions of Perl back to v5.10

1.01      2017-07-07 18:16:59-04:00 America/New_York
        - Deactivate TravisCI testing of 3 old Perl versions temporarily
        - Check for any possible experiments before import (bug fix)

1.00      2017-07-07 17:49:43-04:00 America/New_York
        - First version, released on an unsuspecting world.