@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Reverse use of strictures in favor of strict/warnings
 
 1.04      2018-06-20 12:31:51-07:00 America/Los_Angeles
         - use strictures 2
